name:                lens-dependent-map
version:             0.1.0
synopsis:            Additional lens functions for Dependent Map structures
description:
  <<http://i.imgur.com/uZnp9ke.png>>
  .
  Provides some additional typeclasses and functions for working with Dependent Maps.
license:             BSD3
license-file:        LICENCE
author:              Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
maintainer:          Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
copyright:           Copyright (c) 2018, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
category:            Data, Dependent Types, Lenses
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.24

source-repository   head
  type:             git
  location:         git@github.com/qfpl/lens-dependent-maps/lens-dependent-maps.git

library
  ghc-options:         -fwarn-unused-imports -fwarn-unused-binds

  exposed-modules:     Data.Dependent.Map.Lens

  build-depends:       base >=4.9 && <=4.12
                     , dependent-map > 0.2 && <= 0.3
                     , lens >= 4.11 && <= 5

  hs-source-dirs:      src

  default-language:    Haskell2010
